--- a/lib/nblibraries.properties
+++ b/lib/nblibraries.properties
@@ -12,6 +12,11 @@ libs.jReddit.classpath=\
 libs.jReddit.displayName=JReddit
 libs.jReddit.src=\
     ${base}/jreddit/src/src/
+libs.Raw4J.classpath=\
+    
+libs.Raw4J.displayName=Raw4J
+libs.Raw4J.src=\
+    ${base}/raw4j/src/src/
 libs.SimpleJSON.classpath=\
     ${base}/json-simple/json-simple.jar
 libs.SimpleJSON.displayName=JSON-Simple
