--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -34,7 +34,8 @@ jar.compress=false
 javac.classpath=\
     ${libs.jReddit.classpath}:\
     ${libs.SimpleJSON.classpath}:\
-    ${libs.JANSI.classpath}
+    ${libs.JANSI.classpath}:\
+    ${libs.Raw4J.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
