Switch to new JLogger library (1/2)

--- a/lib/nblibraries.properties
+++ b/lib/nblibraries.properties
@@ -7,18 +7,23 @@ libs.JANSI.classpath=\
 libs.JANSI.displayName=JANSI
 libs.JANSI.src=\
     ${base}/jansi/src/jansi/src/
+libs.JLogger.classpath=\
+    ${base}/JLogger/JLogger.jar
+libs.JLogger.displayName=JLogger
+libs.JLogger.src=\
+    ${base}/JLogger/src/src/
 libs.jReddit.classpath=\
-    ${base}/jreddit/jreddit.jar
+    ${base}/JReddit/JReddit.jar
 libs.jReddit.displayName=JReddit
 libs.jReddit.src=\
-    ${base}/jreddit/src/src/
+    ${base}/JReddit/src/src/
 libs.Raw4J.classpath=\
     
 libs.Raw4J.displayName=Raw4J
 libs.Raw4J.src=\
-    ${base}/raw4j/src/src/
+    ${base}/Raw4J/src/src/
 libs.SimpleJSON.classpath=\
-    ${base}/json-simple/json-simple.jar
+    ${base}/JSON-Simple/JSON-Simple.jar
 libs.SimpleJSON.displayName=JSON-Simple
 libs.SimpleJSON.src=\
-    ${base}/json-simple/src/src/
+    ${base}/JSON-Simple/src/src/
