--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -34,8 +34,8 @@ jar.compress=false
 javac.classpath=\
     ${libs.jReddit.classpath}:\
     ${libs.SimpleJSON.classpath}:\
-    ${libs.JANSI.classpath}:\
-    ${libs.Raw4J.classpath}
+    ${libs.Raw4J.classpath}:\
+    ${libs.JLogger.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -66,11 +66,7 @@ mkdist.disabled=false
 platform.active=default_platform
 run.classpath=\
     ${javac.classpath}:\
-    ${build.classes.dir}:\
-    ${libs.SimpleJSON.classpath}:\
-    ${libs.jReddit.classpath}:\
-    ${libs.JANSI.classpath}:\
-    ${libs.Raw4J.classpath}
+    ${build.classes.dir}
 # Space-separated list of JVM arguments used when running the project.
 # You may also define separate properties like run-sys-prop.name=value instead of -Dname=value.
 # To set system properties for unit tests define test-sys-prop.name=value:
