--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -3,4 +3,4 @@ do.depend=false
 do.jar=true
 javac.debug=true
 javadoc.preview=true
-user.properties.file=/Users/Asher/.netbeans/8.0rc1/build.properties
+user.properties.file=C:\\Users\\Asher\\AppData\\Roaming\\NetBeans\\8.0rc1\\build.properties
